--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "slidev": ">=0.48.0"
   },
   "scripts": {
-    "build": "slidev build example.md",
-    "dev": "slidev example.md --open",
-    "export": "slidev export example.md",
-    "screenshot": "slidev export example.md --format png"
+    "build": "slidev build slide.md",
+    "dev": "slidev slide.md --open",
+    "export": "slidev export slide.md",
+    "screenshot": "slidev export slide.md --format png"
   },
   "dependencies": {
     "@slidev/types": "^52.0.0"
